spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -10851,7 +10851,7 @@ p {
 
 @media (min-width: 768px) {
   section {
-    padding: 9rem 0;
+    padding: 3rem 0;
   }
 }
 
@@ -11269,6 +11269,10 @@ section#contact, section#service {
   padding-top: 74.17px;
 }
 
+section#portfolio, section#about {
+  padding-top: 100px;
+}
+
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
 }
@@ -11334,7 +11338,7 @@ section#contact form#contactForm :-ms-input-placeholder {
   background-image: url(../assets/img/dienst-mockup.png);
   color: rgba(255, 255, 255, 0.50);
   transition: transform 1s ease, color 1s ease;
-  padding: 100px;
+  padding: 150px 0;
 
 }
 
@@ -11558,7 +11562,7 @@ button {
 }
 
 .bg-purple {
-  background-color: #5b0a5b;
+  background-color: #773e6b;
 }
 
 .bg-grey {
